Revert "QL_CacDaiLy 4.0"
This reverts commit 3c1102f8eb0090591677768f505edc0233795240.

--- a/QL_DaiLyXeMay/QL_DaiLyXeMay/QL_DaiLyXeMay.csproj
+++ b/QL_DaiLyXeMay/QL_DaiLyXeMay/QL_DaiLyXeMay.csproj
@@ -59,7 +59,7 @@
     <Compile Include="frmTrangChu.Designer.cs">
       <DependentUpon>frmTrangChu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Data.cs" />
+    <Compile Include="GetData.cs" />
     <Compile Include="KiemTra.cs" />
     <Compile Include="NhanVien\ucBaoCaoDoanhSo.cs">
       <SubType>UserControl</SubType>
